--- a/force-app/main/default/lwc/compLibrary/compLibrary.html
+++ b/force-app/main/default/lwc/compLibrary/compLibrary.html
@@ -26,7 +26,7 @@ onchange={handleChange}></lightning-checkbox-group>
 <hr>
 
 
-<lightning-button variant="brand" label="Birlikte Soru Çözengiller" title="Primary action" onclick={handleClick} class="slds-m-left_x-small"></lightning-button>
+<lightning-button variant="brand" label="Birlikte Soru Çözengiller"  onclick={handleClick} class="slds-m-left_x-small"></lightning-button>
 
 
         </div>
